--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,89 +2,91 @@
 version: '3.8'
 
 x-logging: &default-logging
-  driver: json-file
-  options:
-    tag: '{{.ImageName}}|{{.Name}}'
-    max-file: '5'
-    max-size: '1m'
+    driver: json-file
+    options:
+        tag: '{{.ImageName}}|{{.Name}}'
+        max-file: '5'
+        max-size: '1m'
 
 networks:
-  web_network:
-    name: web_network
+    web_network:
+        name: web_network
 
 volumes:
-  caddy_config:
-  caddy_data:
-  database_data:
+    caddy_config:
+    caddy_data:
+    database_data:
 
 services:
-  webserver:
-    image: caddy:2.7-alpine
-    container_name: webserver
-    restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 128M
-    ports:
-      - "8000:80"
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
-      - ./public:/var/www/html/public
-      - caddy_config:/config
-      - caddy_data:/data
-    networks:
-      - web_network
-    environment:
-      - HOST=:80
-      - AUTO_HTTPS_OFF=auto_https off
-      - DEBUG=debug
-    logging: *default-logging
+    webserver:
+        image: caddy:2.7-alpine
+        container_name: webserver
+        restart: unless-stopped
+        deploy:
+            resources:
+                limits:
+                    memory: 512M
+                reservations:
+                    memory: 128M
+        ports:
+            - "8000:80"
+        volumes:
+            - ./Caddyfile:/etc/caddy/Caddyfile
+            - ./public:/var/www/html/public
+            - caddy_config:/config
+            - caddy_data:/data
+        networks:
+            - web_network
+        environment:
+            - HOST=:80
+            - AUTO_HTTPS_OFF=auto_https off
+            - DEBUG=debug
+        logging: *default-logging
 
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: laravel_app
-    restart: unless-stopped
-    ports:
-        - "8001:8001"
-    volumes:
-      - ./:/var/www/html
-    networks:
-      - web_network
-    environment:
-      - DB_CONNECTION=mysql
-      - DB_HOST=database
-      - DB_PORT=3306
-      - DB_DATABASE=database
-      - DB_USERNAME=user
-      - DB_PASSWORD=password
-    depends_on:
-      - database
-    logging: *default-logging
+    app:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: laravel_app
+        restart: unless-stopped
+        ports:
+            - "8001:8001"
+        volumes:
+            - ./:/var/www/html
+        networks:
+            - web_network
+        environment:
+            - DB_CONNECTION=mysql
+            - DB_HOST=database
+            - DB_PORT=3306
+            - DB_DATABASE=database
+            - DB_USERNAME=user
+            - DB_PASSWORD=password
+            - APP_DEBUG=true
+            - YA_API_KEY=
+        depends_on:
+            - database
+        logging: *default-logging
 
-  database:
-    image: mysql:8.3
-    container_name: database
-    restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 1g
-        reservations:
-          memory: 128m
-    networks:
-      - web_network
-    environment:
-      - MYSQL_DATABASE=database
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=password
-      - MYSQL_ROOT_PASSWORD=password
-    ports:
-      - "3306:3306"
-    volumes:
-      - database_data:/var/lib/mysql
-    logging: *default-logging
+    database:
+        image: mysql:8.3
+        container_name: database
+        restart: unless-stopped
+        deploy:
+            resources:
+                limits:
+                    memory: 1g
+                reservations:
+                    memory: 128m
+        networks:
+            - web_network
+        environment:
+            - MYSQL_DATABASE=database
+            - MYSQL_USER=user
+            - MYSQL_PASSWORD=password
+            - MYSQL_ROOT_PASSWORD=password
+        ports:
+            - "3306:3306"
+        volumes:
+            - database_data:/var/lib/mysql
+        logging: *default-logging
